postgres-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: sonarqube
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
   - port: 5432
     targetPort: 5432
  selector:
   app: postgres
