sonar-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarqube
  name: sonarqube
  namespace: sonarqube
spec:
  ports:
    - name: sonar
      port: 80
      protocol: TCP
      targetPort: 9000
      nodePort: 31500
  selector:
    app: sonarqube
  type: NodePort
