sonar-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonar-ingress
  namespace: sonarqube
spec:
  rules:
  - http:
      paths:
      - path: /sonar
        pathType: Prefix
        backend:
          service:
            name: sonarqube
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonar
  namespace: sonarqube
spec:
  rules:
  - host: dev.fawry.local
    http:
      paths:
      - path: /sonar
        pathType: Prefix
        backend:
          service:
            name: sonarqube
            port:
              number: 80
